# betty-gramps-demo

./: .gitignore  README.md  betty.yaml  prepare-gramps  pyproject.toml
.github/workflows/: generate.yml
