[build-system]
requires = [
    'setuptools ~= 75.3',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'betty-demo'
version = '0.0.0'
authors = [
  {name = 'Bart Feenstra', email = 'bar@bartfeenstra.com'},
]
requires-python = '~= 3.12'
dependencies = [
    'betty ~= 0.4.7',
]

[tool.setuptools.packages.find]
where = ['.']
